@@ -1,3 +1,7 @@
+JO-2007-10-23-0: Bugfix:      o Returned method commit and rollback in Database class to previous state,
+                                state where they are not checking if connection is closed
+                              o removed some unnecessary logs
+
 JO-2007-08-24-0: Refactoring: Class, method name changes, new package
                  Review:      JG
 
